# cmodimidi

./: CMakeLists.txt  README.md  dump.cpp  dump.h  main.cpp  midi.cpp  midi.h  options.cpp  options.h  play.cpp  play.h  synthseq.cpp  synthseq.h  util.cpp  util.h  version.h
tools/: dumpnotes2ly.py  genver.py  modidump2ly.cpp
